src/tests/snapshots/ppl__tests__constraints.error.snap
---
source: src/tests/mod.rs
expression: err
---
Error: semantics::no_function

  × no function `bar <:Integer>`
    ╭─[main.ppl:10:5]
  9 │ bar none
 10 │ bar 1
    ·     ┬
    ·     ╰── <:Integer>
 11 │ 
    ╰────

Advice:   ☞ candidate is not viable
  ╰─▶ semantics::not_implemented
      
        × `Integer` doesn't satisfy trait `Foo` requirements
         ╭─[main.ppl:2:2]
       1 │ trait Foo:
       2 │     fn foo <:Self>
         ·     ───────┬──────
         ·            ╰── This required function isn't implemented
       3 │
         ╰────
      
semantics::no_function

  × no function `baz <:None> <:Bool>`
    ╭─[main.ppl:17:5]
 16 │ baz none none
 17 │ baz none true
    ·     ──┬─ ──┬─
    ·       │    ╰── <:Bool>
    ·       ╰── <:None>
 18 │ baz true none
    ╰────

Advice:   ☞ candidate is not viable
  ╰─▶ semantics::type_mismatch
      
        × expected `T` type, got `Bool`
      
      Error:   × T
          ╭─[main.ppl:12:24]
       11 │
       12 │ fn<T: Foo> baz <a: T> <b: T>:
          ·                        ┬
          ·                        ╰── this has `T` type
       13 │     foo a
          ╰────
      Error:   × Bool
          ╭─[main.ppl:17:10]
       16 │ baz none none
       17 │ baz none true
          ·          ──┬─
          ·            ╰── this has `Bool` type
       18 │ baz true none
          ╰────
      
semantics::no_function

  × no function `baz <:Bool> <:None>`
    ╭─[main.ppl:18:5]
 17 │ baz none true
 18 │ baz true none
    ·     ──┬─ ──┬─
    ·       │    ╰── <:None>
    ·       ╰── <:Bool>
 19 │ baz true true
    ╰────

Advice:   ☞ candidate is not viable
  ╰─▶ semantics::type_mismatch
      
        × expected `T` type, got `None`
      
      Error:   × T
          ╭─[main.ppl:12:24]
       11 │
       12 │ fn<T: Foo> baz <a: T> <b: T>:
          ·                        ┬
          ·                        ╰── this has `T` type
       13 │     foo a
          ╰────
      Error:   × None
          ╭─[main.ppl:18:10]
       17 │ baz none true
       18 │ baz true none
          ·          ──┬─
          ·            ╰── this has `None` type
       19 │ baz true true
          ╰────
